Kleine Code-Optimierung gemäß LINT